# bayou

./: Cargo.toml  README.md  ap_config.toml  config.toml
migrations/: V1__initial.sql
protocol/: Cargo.toml  README.md
protocol/src/cryptography/: key.rs  openssl.rs
protocol/src/protocol/: mod.rs  webfinger.rs  webfinger_resolve.rs
server/: Cargo.toml  README.md
server/migrations/: V1__initial.sql
server/src/: app.rs  config.rs  lib.rs  main.rs
server/src/api/: mod.rs  routes.rs  webfinger.rs
server/src/api/ap_api/: actor.rs  inbox.rs  object.rs  outbox.rs  routes.rs
server/src/api/versia_api/: instance_discovery.rs  posts.rs
server/src/api/well_known/: mod.rs  routes.rs  webfinger.rs
server/src/db/: conn.rs  dbconn.rs
server/src/db/postgres/: actors.rs  create_user.rs  init.rs  instance_actor.rs  mod.rs  pg_conn.rs
server/src/db/utility/: instance_actor.rs  new_actor.rs  permission.rs  post_types.rs
server/src/tasks/: notify_followers.rs
src/: app.rs  config.rs  lib.rs  main.rs
src/api/: headers.rs  page_query.rs  webfinger.rs
src/api/ap_api/: actor.rs  inbox.rs  object.rs  outbox.rs
src/api/versia_api/: inbox.rs  instance_discovery.rs  outbox.rs  posts.rs  users.rs
src/cryptography/: passwords.rs
src/db/: conn.rs  curr_time.rs  dbconn.rs  mod.rs  pg_conn.rs  pg_sesh.rs  types.rs
src/db/pg_sesh/: auth_token.rs  comm_membership.rs  community.rs  instance.rs  message.rs  mod.rs  proxy.rs  registered_device.rs  room.rs  signup_token.rs  (+1 more)
src/federation/: emoji.rs  media.rs  mod.rs
src/file_manager/: mod.rs
src/live_server/: mod.rs  server.rs  socket_handler.rs  socket_msg.rs
src/routes/: mod.rs
src/tasks/: mod.rs  notify_followers.rs
(+68 files in other folders)
