[package]
name = "bayou"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[workspace]
resolver = "2"
members = [
    "server",
    "protocol",
]

# [lib]
# name = "bayou_protocol"
# path = "protocol/src/lib.rs"

[[bin]]
name = "bayou_server"
path = "server/src/main.rs"

[dependencies]
actix-web = {version = "4"}
server = {path = "server"}
